# dnkit

./: .coverage  .gitignore  .pre-commit-config.yaml  MILESTONE1_SUMMARY.md  MILESTONE2_SUMMARY.md  Makefile  PROGRESS_REPORT.md  README.md  pyproject.toml  test_enhanced_tools.py
.github/workflows/: ci.yml  release.yml
config/: development.yaml  enhanced_tools_config.yaml
config/modules/: tools.yaml
doc/: DEVELOPMENT_GUIDE.md  IMPLEMENTATION_STATUS.md  LogloomAPI.md  PROGRESS_TRACKING.md  mcp-toolkit-design.md  n8n-connection-example.md  n8n-mcp-integration.md  n8n-mcp-support-summary.md  n8n_testing_guide_phase3.md
doc/basic_tools/: 01-architecture.md  02-file-system-tools.md  03-network-tools.md  04-system-tools.md  05-database-tools.md  06-context-engine.md  07-task-management.md  08-visualization-tools.md  09-memory-tools.md  10-integration-patterns.md  11-security-model.md  CHROMADB_UNIFIED_IMPLEMENTATION.md  CONSISTENCY_CHECK.md  IMPLEMENTATION_NOTES.md  README.md
doc/context_engine/: 01-current-analysis.md  02-git-integration.md  03-version-management.md  04-agent-automata.md  05-enhanced-context.md  06-memory-evolution.md  07-tool-orchestration.md  08-phase2-architecture.md  09-implementation-roadmap.md  10-testing-strategy.md  11-semantic-intelligence.md  12-semantic-intelligence-usage.md  13-n8n-integration-optimization.md  14-n8n-testing-guide.md  15-phase1-completion-summary.md  PROGRESS_TRACKING.md  README.md  n8n-agent-advanced-config.md  n8n-agent-debug-prompt.md  n8n-agent-force-call-prompt.md  n8n-agent-system-prompt.md
doc/module/: 00_module_overview.md  01_core_interfaces.md  02_protocol_handler.md  03_tool_registry.md  04_logloom_config.md  05_basic_tools.md  05_basic_tools_config.md  06_platform_architecture.md  07_n8n_integration.md
locales/: en_US.json  zh.json  zh_CN.json
scripts/: README.md  run_enhanced_mcp.sh  run_mcp_daemon.sh  setup-local-dev.sh  test_mcp_compliance.py  test_phase3_tools.py
src/mcp_toolkit/: __init__.py  enhanced_server.py  main.py
src/mcp_toolkit/context/: __init__.py  code_analyzer.py  context_engine.py  query_processor.py
src/mcp_toolkit/core/: __init__.py  i18n.py  interfaces.py  logging.py  types.py
src/mcp_toolkit/protocols/: __init__.py  base.py  http_handler.py  jsonrpc.py  middleware.py  router.py  sse_handler.py  websocket_handler.py
src/mcp_toolkit/services/: __init__.py  basic_tools.py
src/mcp_toolkit/storage/: __init__.py  unified_manager.py
src/mcp_toolkit/tools/: __init__.py  agent_automation.py  agent_behavior.py  base.py  collaboration.py  context_engine.py  context_tools.py  echo.py  enhanced_file_operations.py  enhanced_network.py  enhanced_system.py  file_operations.py  git_integration.py  intelligent_analysis.py  memory_management.py  network.py  operation_tracker.py  search.py  semantic_engine.py  task_management.py  terminal.py  version_management.py  visualization.py
tests/: conftest.py
tests/integration/: test_basic_tools_integration.py  test_context_engine_integration.py  test_protocol_integration.py
tests/test_dir/: demo.md  test_write.txt
tests/unit/: test_basic_tools.py  test_basic_tools_service.py  test_code_analyzer.py  test_context_engine.py  test_context_tools.py  test_file_operations_tools.py  test_http_handler.py  test_i18n.py  test_interfaces.py  test_jsonrpc.py  test_logging.py  test_main.py  test_query_processor.py  test_search_tools.py
